--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
         <!--New chat-->
         <scene sceneID="db6-mU-8Il">
             <objects>
-                <viewController storyboardIdentifier="CreateConversationViewController" id="wRQ-Sd-Bqd" customClass="CreateConversationViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateConversationContainerViewController" id="wRQ-Sd-Bqd" customClass="CreateConversationContainerViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VUq-sd-sz2"/>
                         <viewControllerLayoutGuide type="bottom" id="kEf-ew-gOJ"/>
@@ -168,22 +168,36 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bcr-ye-21T" customClass="TableView" customModule="PosInCore">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="YQm-BM-BIZ">
+                                <rect key="frame" x="206" y="8" width="189" height="29"/>
+                                <segments>
+                                    <segment title="People"/>
+                                    <segment title="Communities"/>
+                                </segments>
+                                <color key="tintColor" red="0.88235294119999996" green="0.0" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentedControlValueChanged:" destination="wRQ-Sd-Bqd" eventType="valueChanged" id="En0-zq-nAf"/>
+                                </connections>
+                            </segmentedControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zTZ-Uq-CHr" userLabel="Container">
+                                <rect key="frame" x="0.0" y="44" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kEf-ew-gOJ" firstAttribute="top" secondItem="bcr-ye-21T" secondAttribute="bottom" id="0lR-Ur-f47"/>
-                            <constraint firstItem="bcr-ye-21T" firstAttribute="leading" secondItem="JYa-e6-fzS" secondAttribute="leading" id="72o-JK-bMk"/>
-                            <constraint firstAttribute="trailing" secondItem="bcr-ye-21T" secondAttribute="trailing" id="LwC-mo-kau"/>
-                            <constraint firstItem="bcr-ye-21T" firstAttribute="top" secondItem="VUq-sd-sz2" secondAttribute="bottom" id="scb-as-DZd"/>
+                            <constraint firstItem="YQm-BM-BIZ" firstAttribute="centerX" secondItem="JYa-e6-fzS" secondAttribute="centerX" id="4S4-Fl-iBM"/>
+                            <constraint firstAttribute="trailing" secondItem="zTZ-Uq-CHr" secondAttribute="trailing" id="7dj-pV-5Je"/>
+                            <constraint firstItem="zTZ-Uq-CHr" firstAttribute="top" secondItem="YQm-BM-BIZ" secondAttribute="bottom" constant="8" id="PGk-Pb-wKv"/>
+                            <constraint firstItem="zTZ-Uq-CHr" firstAttribute="leading" secondItem="JYa-e6-fzS" secondAttribute="leading" id="QOu-Dg-OhN"/>
+                            <constraint firstItem="YQm-BM-BIZ" firstAttribute="top" secondItem="VUq-sd-sz2" secondAttribute="bottom" constant="8" id="cw6-5M-KcE"/>
+                            <constraint firstItem="kEf-ew-gOJ" firstAttribute="top" secondItem="zTZ-Uq-CHr" secondAttribute="bottom" id="dW7-l7-GkL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New chat" id="Pkh-Xl-2kV"/>
                     <connections>
-                        <outlet property="tableView" destination="bcr-ye-21T" id="A93-LY-vKy"/>
+                        <outlet property="contentView" destination="zTZ-Uq-CHr" id="xff-KN-J39"/>
+                        <outlet property="segmentedControl" destination="YQm-BM-BIZ" id="drt-6a-wsW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4QH-aU-lrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1241,6 +1255,128 @@
             </objects>
             <point key="canvasLocation" x="-1893" y="-1594"/>
         </scene>
+        <!--Create Community Conversation View Controller-->
+        <scene sceneID="vu5-5i-x4S">
+            <objects>
+                <viewController storyboardIdentifier="CreateCommunityConversationViewController" id="91u-gi-w8M" customClass="CreateCommunityConversationViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7Xw-48-b2H"/>
+                        <viewControllerLayoutGuide type="bottom" id="tsy-Db-01o"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kab-uy-Tke">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="t6O-ZB-hPV" customClass="TableView" customModule="PosInCore">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You don’t have community you follow" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NdB-2M-9QQ">
+                                <rect key="frame" x="0.0" y="288.5" width="600" height="23.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="NdB-2M-9QQ" secondAttribute="trailing" id="77s-Js-Xkg"/>
+                            <constraint firstAttribute="trailing" secondItem="t6O-ZB-hPV" secondAttribute="trailing" id="LJH-lf-Igs"/>
+                            <constraint firstItem="t6O-ZB-hPV" firstAttribute="top" secondItem="7Xw-48-b2H" secondAttribute="bottom" id="XQ7-Ig-ugy"/>
+                            <constraint firstItem="tsy-Db-01o" firstAttribute="top" secondItem="t6O-ZB-hPV" secondAttribute="bottom" id="ZdN-oe-2CX"/>
+                            <constraint firstItem="NdB-2M-9QQ" firstAttribute="centerX" secondItem="kab-uy-Tke" secondAttribute="centerX" id="kM9-nS-PfX"/>
+                            <constraint firstItem="t6O-ZB-hPV" firstAttribute="leading" secondItem="kab-uy-Tke" secondAttribute="leading" id="mdF-fO-69l"/>
+                            <constraint firstItem="NdB-2M-9QQ" firstAttribute="leading" secondItem="kab-uy-Tke" secondAttribute="leading" id="n7q-fA-flY"/>
+                            <constraint firstItem="NdB-2M-9QQ" firstAttribute="centerY" secondItem="kab-uy-Tke" secondAttribute="centerY" id="yNa-g6-JIg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="followLabel" destination="NdB-2M-9QQ" id="Sth-KN-d44"/>
+                        <outlet property="tableView" destination="t6O-ZB-hPV" id="ihh-VG-vD0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JJ2-Ue-pfT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1710" y="1481"/>
+        </scene>
+        <!--Create User Conversation View Controller-->
+        <scene sceneID="MO6-EI-OHH">
+            <objects>
+                <viewController storyboardIdentifier="CreateUserConversationViewController" id="gzk-2J-sbO" customClass="CreateUserConversationViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rYL-MF-O2g"/>
+                        <viewControllerLayoutGuide type="bottom" id="w57-ob-vCc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="E1t-dl-f6U">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Gqe-Zq-886" customClass="TableView" customModule="PosInCore">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You don’t have people you follow" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QuD-40-8QT">
+                                <rect key="frame" x="0.0" y="288.5" width="600" height="23.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="QuD-40-8QT" secondAttribute="trailing" id="D0l-Ty-66h"/>
+                            <constraint firstItem="QuD-40-8QT" firstAttribute="centerY" secondItem="E1t-dl-f6U" secondAttribute="centerY" id="D3N-nz-Dez"/>
+                            <constraint firstItem="Gqe-Zq-886" firstAttribute="leading" secondItem="E1t-dl-f6U" secondAttribute="leading" id="KHU-ep-nja"/>
+                            <constraint firstItem="QuD-40-8QT" firstAttribute="leading" secondItem="E1t-dl-f6U" secondAttribute="leading" id="Yhm-Rb-hzh"/>
+                            <constraint firstItem="QuD-40-8QT" firstAttribute="centerX" secondItem="E1t-dl-f6U" secondAttribute="centerX" id="ggc-XL-qic"/>
+                            <constraint firstAttribute="trailing" secondItem="Gqe-Zq-886" secondAttribute="trailing" id="lqx-PW-kmE"/>
+                            <constraint firstItem="w57-ob-vCc" firstAttribute="top" secondItem="Gqe-Zq-886" secondAttribute="bottom" id="p2c-xk-KRH"/>
+                            <constraint firstItem="Gqe-Zq-886" firstAttribute="top" secondItem="rYL-MF-O2g" secondAttribute="bottom" id="rt0-d4-T1p"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="followLabel" destination="QuD-40-8QT" id="FSC-Mr-Bm0"/>
+                        <outlet property="tableView" destination="Gqe-Zq-886" id="0Ez-WP-lNT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="see-3C-g2E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2418" y="1485"/>
+        </scene>
+        <!--New chat-->
+        <scene sceneID="aKe-cm-46Y">
+            <objects>
+                <viewController id="uI4-S4-5OW" customClass="CreateConversationViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QvO-kz-3Gw"/>
+                        <viewControllerLayoutGuide type="bottom" id="s4S-Oz-d9d"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="foV-IV-vmv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="C4c-vx-5vl" customClass="TableView" customModule="PosInCore">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="s4S-Oz-d9d" firstAttribute="top" secondItem="C4c-vx-5vl" secondAttribute="bottom" id="2Vb-5w-jqa"/>
+                            <constraint firstAttribute="trailing" secondItem="C4c-vx-5vl" secondAttribute="trailing" id="2nb-Jk-vHZ"/>
+                            <constraint firstItem="C4c-vx-5vl" firstAttribute="top" secondItem="QvO-kz-3Gw" secondAttribute="bottom" id="8XM-jJ-Ng1"/>
+                            <constraint firstItem="C4c-vx-5vl" firstAttribute="leading" secondItem="foV-IV-vmv" secondAttribute="leading" id="d7P-5Z-GLk"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="New chat" id="7WB-N6-p63"/>
+                    <connections>
+                        <outlet property="tableView" destination="C4c-vx-5vl" id="VJ8-sk-xSK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n9g-zX-0k1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2254" y="767"/>
+        </scene>
     </scenes>
     <resources>
         <image name="SplashImage" width="320" height="568"/>
@@ -1249,8 +1385,8 @@
         <image name="productClockAvailability" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="9u4-qy-iVR"/>
+        <segue reference="gvg-eL-WZN"/>
         <segue reference="WXU-OU-n2l"/>
-        <segue reference="sID-M8-MPA"/>
-        <segue reference="1fL-aw-xyq"/>
     </inferredMetricsTieBreakers>
 </document>
