--- a/PositionIn/Views/NewsCardCell/PositionIn.NewsCardCell.xib
+++ b/PositionIn/Views/NewsCardCell/PositionIn.NewsCardCell.xib
@@ -33,6 +33,9 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Wizard of the Coast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghU-PB-oTZ">
                                 <rect key="frame" x="56" y="88" width="240" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="OcQ-EQ-pap"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -127,6 +130,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="VFT-5Z-uSd" firstAttribute="trailing" secondItem="6tM-Tp-Q18" secondAttribute="trailingMargin" id="4Ba-ut-tAA"/>
                     <constraint firstItem="VFT-5Z-uSd" firstAttribute="leading" secondItem="6tM-Tp-Q18" secondAttribute="leadingMargin" id="AaX-Fg-OpG"/>
@@ -136,12 +140,14 @@
             </tableViewCellContentView>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
+                <outlet property="commentsLabel" destination="zX3-BN-ya0" id="Tdk-3m-A9u"/>
                 <outlet property="detailsLabel" destination="gvg-wy-92o" id="iZQ-wM-Gbz"/>
                 <outlet property="feedItemImageView" destination="z5a-Vc-Unv" id="BD6-ad-b4g"/>
                 <outlet property="feedItemLogoImageView" destination="WbR-5D-8pL" id="Hcl-vE-KmI"/>
                 <outlet property="headerLabel" destination="ghU-PB-oTZ" id="Df9-nU-DzW"/>
                 <outlet property="imageHeightConstaint" destination="wai-cu-y5i" id="eu0-7Q-TUI"/>
                 <outlet property="infoLabel" destination="CmM-7b-atD" id="GH4-ro-qMu"/>
+                <outlet property="likesLabel" destination="POd-Ft-gAH" id="6Ta-VE-FWo"/>
             </connections>
             <point key="canvasLocation" x="215" y="341"/>
         </tableViewCell>
